# mnemos-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
engine/: CMakeLists.txt  engine.cpp  engine.hpp
engine/core/: log.cpp  log.hpp  timer.cpp  timer.hpp
engine/platform/: platform_detection.hpp  platform_linux.cpp  platform_linux.hpp  types.hpp  window.hpp
engine/renderer/: renderer.cpp  renderer.hpp
game/: CMakeLists.txt  game.cpp
